// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c2 {
  margin-bottom: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  position: relative;
  min-height: 36px;
  max-height: 112px;
  width: 100%;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  white-space: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 100%;
  max-width: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
}

.c15 {
  margin-left: 0px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c6 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c13 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: transparent;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c13::-webkit-input-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c13::-moz-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c13:-ms-input-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c13::placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c13:focus {
  outline: none;
}

.c14 {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 0;
  background-color: hsla(218,89%,51%,1);
  border-width: 1px;
  height: 1px;
}

.c7 {
  background-color: hsla(216,15%,54%,0.09);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
}

.c7:hover {
  background-color: hsla(216,15%,54%,0.18);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c7:focus-within {
  background-color: hsla(216,15%,54%,0.09);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
}

.c8 {
  -webkit-animation: none;
  animation: none;
  max-height: 145px;
}

.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

<div>
  <div
    class=""
    data-blade-component="textinput"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="textinput-1-input-2"
          style="width: auto; flex-shrink: 0; margin-right: 16px;"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <p
                class="c4"
                data-blade-component="text"
              >
                Enter name
              </p>
              <div
                class="c5"
                data-blade-component="visually-hidden"
              >
                <p
                  class="c6"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class=" c7 c8"
        data-blade-component="base-box"
      >
        <div
          class="c9"
          data-blade-component="base-box"
        >
          <div
            class="c10"
            data-blade-component="base-box"
          >
            <div
              class="c11"
              data-blade-component="base-box"
            >
              <div
                class="c12"
                data-blade-component="base-box"
              >
                <input
                  aria-describedby=""
                  aria-disabled="false"
                  aria-invalid="false"
                  aria-required="false"
                  autocomplete="off"
                  class="c13"
                  data-blade-component="styled-base-input"
                  enterkeyhint="enter"
                  id="textinput-1-input-2"
                  inputmode="text"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=" c14"
          data-blade-component="base-box"
        />
      </div>
    </div>
    <div
      class="c15"
      data-blade-component="base-box"
    >
      <div
        class="c16"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;

exports[`<TextInput /> should render with icon, prefix, suffix 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c2 {
  margin-bottom: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 12px;
}

.c11 {
  padding-left: 4px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  position: relative;
  min-height: 36px;
  max-height: 112px;
  width: 100%;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  white-space: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 100%;
  max-width: 100%;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c19 {
  padding-right: 12px;
}

.c21 {
  margin-left: 0px;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c6 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c12 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c17 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: transparent;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c17::-webkit-input-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c17::-moz-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c17:-ms-input-placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c17::placeholder {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c17:focus {
  outline: none;
}

.c20 {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 0;
  background-color: hsla(218,89%,51%,1);
  border-width: 1px;
  height: 1px;
}

.c7 {
  background-color: hsla(216,15%,54%,0.09);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
}

.c7:hover {
  background-color: hsla(216,15%,54%,0.18);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c7:focus-within {
  background-color: hsla(216,15%,54%,0.09);
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
}

.c8 {
  -webkit-animation: none;
  animation: none;
  max-height: 145px;
}

.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

<div>
  <div
    class=""
    data-blade-component="textinput"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="textinput-31-input-32"
          style="width: auto; flex-shrink: 0; margin-right: 16px;"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <p
                class="c4"
                data-blade-component="text"
              >
                Enter company website
              </p>
              <div
                class="c5"
                data-blade-component="visually-hidden"
              >
                <p
                  class="c6"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class=" c7 c8"
        data-blade-component="base-box"
      >
        <div
          class="c9"
          data-blade-component="base-box"
        >
          <div
            class="c10"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                data-blade-component="svg-path"
                fill="hsla(216, 27%, 36%, 1)"
              />
              <path
                d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                data-blade-component="svg-path"
                fill="hsla(216, 27%, 36%, 1)"
              />
              <path
                clip-rule="evenodd"
                d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                data-blade-component="svg-path"
                fill="hsla(216, 27%, 36%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            class="c11"
            data-blade-component="base-box"
          >
            <p
              class="c12"
              data-blade-component="text"
            >
              https://
            </p>
          </div>
        </div>
        <div
          class="c13"
          data-blade-component="base-box"
        >
          <div
            class="c14"
            data-blade-component="base-box"
          >
            <div
              class="c15"
              data-blade-component="base-box"
            >
              <div
                class="c16"
                data-blade-component="base-box"
              >
                <input
                  aria-describedby=""
                  aria-disabled="false"
                  aria-invalid="false"
                  aria-required="false"
                  autocapitalize="none"
                  autocomplete="off"
                  class="c17"
                  data-blade-component="styled-base-input"
                  enterkeyhint="go"
                  id="textinput-31-input-32"
                  inputmode="url"
                  placeholder="something"
                  prefix="https://"
                  type="url"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="c18"
          data-blade-component="base-box"
        >
          <div
            class="c19"
            data-blade-component="base-box"
          >
            <p
              class="c12"
              data-blade-component="text"
            >
              .com
            </p>
          </div>
        </div>
        <div
          class=" c20"
          data-blade-component="base-box"
        />
      </div>
    </div>
    <div
      class="c21"
      data-blade-component="base-box"
    >
      <div
        class="c22"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;
